# mtcli-fluxo

./: .gitignore  README.md  pyproject.toml
mtcli_fluxo/: absorcao.py  agressao.py  fluxo.py
