[project]
name = "mtcli-fluxo"
version = "0.1.0"
description = "Plugin mtcli de fluxo estimado"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "mtcli",
    "pandas"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mtcli.plugins"]
fluxo = "mtcli_fluxo.fluxo:fluxo"
